syntax = "proto3";

package cart.v1;

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/codeharik/Atlantic/orders/api/cart/v1";

service CartService {
  // rpc PlaceOrder(PlaceOrderRequest) returns (PlaceOrderResponse);

  rpc CreateCart(CreateCartRequest) returns (Cart) {}

  rpc GetCart(GetCartRequest) returns (Cart) {}

  rpc UpdateCartItem(CartItem) returns (Cart) {}

  rpc CheckoutCart(CheckoutCartRequest) returns (CheckoutCartResponse) {}
}

// message PlaceOrderRequest {
//   string OrderID = 1;
//   string CustomerID = 2;
// }

// message PlaceOrderResponse {
//   string OrderID = 1;
// }

message Cart {
  google.protobuf.Timestamp updated_at = 4;

  repeated CartItem items = 5;
}

message CartItem {
  string product_id = 1;
  string name = 2;
  int32 quantity = 3;
}

message CreateCartRequest {}
message GetCartRequest {}
message CheckoutCartRequest {}
message CheckoutCartResponse {}
